--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Invitaciones Digitales</title>
 
     <!-- Meta tags para redes sociales -->
-    <meta property="og:title" content="Invitaviones Digitales">
-    <meta property="og:description" content="¡Creamos las mejores Invitaciones!">
-    <meta property="og:image" content="https://digievento.github.io/DianaLizeth/f.png">
-    <meta property="og:url" content="https://invitadigitales.github.io/mx/">
+    <meta property="og:title" content="Mis XV Años Yoselin Miranda">
+    <meta property="og:description" content="¡Te invito a celebrar conmigo este día tan especial!">
+    <meta property="og:image" content="https://digievento.github.io/YoselinMiranda/f.png">
+    <meta property="og:url" content="https://invitadigitales.github.io/YoselinMiranda/">
     <meta property="og:type" content="website">
 
     <!-- CSS Libraries -->
