--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invitaciones Digitales</title>
+    <title>Mis XV Años Yoselin Miranda</title>
 
     <!-- Meta tags para redes sociales -->
     <meta property="og:title" content="Mis XV Años Yoselin Miranda">
