--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Meta tags para redes sociales -->
     <meta property="og:title" content="Mis XV Años Yoselin Miranda">
     <meta property="og:description" content="¡Te invito a celebrar conmigo este día tan especial!">
-    <meta property="og:image" content="https://digievento.github.io/YoselinMiranda/f.png">
+    <meta property="og:image" content="https://invitadigitales.github.io/YoselinMiranda/f.png">
     <meta property="og:url" content="https://invitadigitales.github.io/YoselinMiranda/">
     <meta property="og:type" content="website">
 
